Update gitignore to remove bin/ contents

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@
 
 # OS X
 .DS_Store
+
+# Assets may be copied from source to bin when compiling
+# We don't want to store these twice in the repository
+bin/*.png
